Fix menu on mobile

--- a/_sass/_responsive.scss
+++ b/_sass/_responsive.scss
@@ -30,10 +30,6 @@
   .nav .links {
     gap: 14px;
     font-size: 12px;
-
-    a:not(:last-child):not(.current) {
-      display: none;
-    }
   }
 
   .nav .lang-toggle {
